--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Ringtone Randomizer</string>
     <string name="ringtone_list">Ringtone\'s list</string>
     <string name="add_tone">Add tone</string>
+    <string name="delete_tones">Delete</string>
 </resources>
